--- a/index.html
+++ b/index.html
@@ -16,7 +16,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ремонт бытовой техники в Алматы - Быстрый и качественный ремонт</title>
     <meta name="description" content="⚡ Быстрый ремонт бытовой техники в Алматы. Выезд мастера в день обращения. Ремонт стиральных машин, холодильников, посудомоек.">
-    <meta name="keywords" content="almaty service, almaty-service, Almaty-Service, Almaty Service, Almaty service, almaty Service, ремонт бытовой техники, ремонт стиральных машин, ремонт холодильников, мастер по ремонту, ремонт бытовой, бытовая техника ремонт, ремонт стиралок, Алматы, ремонт бытовой техники Алматы, ремонт бытовой техники в Алматы, ремонт бытовой техники в Алматинской области">
+    <meta name="keywords" content="Алматы Сервис, Алматы cервис, алматы Сервис, Алматы-Сервис, 
+    Алматы-сервис, алматы-Сервис, алматы-сервис, almaty service, 
+    almaty-service, Almaty-Service, Almaty Service, Almaty service, 
+    almaty Service, ремонт бытовой техники, ремонт стиральных машин, 
+    ремонт холодильников, ремонт холодильников Алматы, ремонт холодильника Алматы, 
+    ремонт холодильников алматы, ремонт холодильника алматы, ремонт холодильника алматинская область, 
+    ремонт холодильника Алматинская область, мастер по ремонту, 
+    ремонт бытовой, бытовая техника ремонт, ремонт стиралок, ремонт стиральных машин, 
+    ремонт стиралки, ремонт стиралок, ремонт стиралки Алматы, ремонт стиралки алматы, 
+    ремонт магазинных холодильников, ремонт магазинного холодильника, 
+    ремонт магазинного холодильника Алматы, ремонт магазинного холодильника алматы, 
+    ремонт магазинного холодильника алматинская область, ремонт магазинного холодильника Алматинская область, 
+    Алматы, ремонт бытовой техники Алматы, ремонт бытовой техники в Алматы, 
+    ремонт бытовой техники в Алматинской области, муж на час, муж на час алматы, 
+    муж на час Алматы, муж на час Алматинская область, муж на час алматинская область">
     
     <!-- Open Graph для соцсетей -->
     <meta property="og:title" content="Ремонт бытовой техники в Алматы">
