--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ремонт бытовой техники в Алматы - Быстрый и качественный ремонт</title>
     <meta name="description" content="⚡ Быстрый ремонт бытовой техники в Алматы. Выезд мастера в день обращения. Ремонт стиральных машин, холодильников, посудомоек.">
-    <meta name="keywords" content="Алматы Сервис, Алматы cервис, алматы Сервис, Алматы-Сервис, 
+    <meta name="keywords" content="Алматы Сервис, Алматы Сервис ремонт бытовой техники,  Алматы Сервис ремонт бытовой техники 999, Алматы cервис, алматы Сервис, Алматы-Сервис, 
     Алматы-сервис, алматы-Сервис, алматы-сервис, almaty service, 
     almaty-service, Almaty-Service, Almaty Service, Almaty service, 
     almaty Service, ремонт бытовой техники, ремонт стиральных машин, 
