--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ремонт бытовой техники в Алматы - Быстрый и качественный ремонт</title>
     <meta name="description" content="⚡ Быстрый ремонт бытовой техники в Алматы. Выезд мастера в день обращения. Ремонт стиральных машин, холодильников, посудомоек.">
-    <meta name="keywords" content="Алматы Сервис, Алматы Сервис ремонт бытовой техники,  Алматы Сервис ремонт бытовой техники 999, Алматы cервис, алматы Сервис, Алматы-Сервис, 
+    <meta name="keywords" content="Алматы Сервис, Алматы Сервис ремонт бытовой техники, Алматы Сервис ремонт бытовой техники 999, Алматы cервис, алматы Сервис, Алматы-Сервис, 
     Алматы-сервис, алматы-Сервис, алматы-сервис, almaty service, 
     almaty-service, Almaty-Service, Almaty Service, Almaty service, 
     almaty Service, ремонт бытовой техники, ремонт стиральных машин, 
@@ -38,7 +38,7 @@
     <meta property="og:type" content="website">
     
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://ваш-сайт.ru">
+    <link rel="canonical" href="https://almaty-service.netlify.app">
     
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
@@ -47,12 +47,14 @@
         "@type": "LocalBusiness",
         "name": "Быстрый ремонт бытовой техники",
         "description": "Ремонт бытовой техники в Алматы",
+        "image": "https://almaty-service.netlify.app/imgs/mobile_logo.png",
+        "logo": "https://almaty-service.netlify.app/imgs/mobile_logo.png",   
         "address": {
             "@type": "PostalAddress",
             "addressLocality": "Алматы"
         },
         "telephone": "+7-747-476-04-53",
-        "openingHours": "ежедневно 09:00-20:00",
+        "openingHours": "Ежедневно 09:00-20:00",
         "areaServed": "Алматы и Алматинская область",
         "serviceType": "Ремонт бытовой техники"
     }
@@ -284,8 +286,11 @@
             </div>
             <div class="five_sec_box">
                 <image src="/imgs/icons/d2.svg" class="five_sec_box_image"></image>
-                <h3>2. Выезжаем на бесплатную диагностику за 1 час</h3>
-                <p>Мастер бесплатно проведёт диагностику на дому и озвучит предварительную стоимость ремонта.</p>
+                <h3>2. Выезжаем на диагностику за 1 час</h3>
+                <p>Мастер проведёт диагностику на дому и озвучит предварительную стоимость ремонта.
+                    <br>
+                    Ремонт-выезд-диагностика при работе не оплачивается.
+                </p>
             </div>
             <div class="five_sec_box">
                 <image src="/imgs/icons/d3.svg" class="five_sec_box_image"></image>
@@ -340,7 +345,7 @@
                     Дополнительно
                 </h2>
                 <p class="footer_ph_num_link">      
-                Режим работы:<br> ежедневно 9:00 - 21:00
+                Режим работы:<br> ежедневно 9:00 - 20:00
                 </p>
                 <p class="footer_ph_num_link">    
                     <i class="fa-solid fa-location-dot"></i>  
@@ -378,9 +383,6 @@
                     <input type="text" id="phone" placeholder="+7 XXX XXX XX XX" required>
                     <label for="address" class="footer_form_label">Адрес</label>
                     <input type="text" id="address" placeholder="Алматы, Улица, дом/кв, номер квартиры" required>
-                    <!-- <a class="btn btn-W first_block_btn" type="submit" href="#contacts"> 
-                        Отправить
-                    </a> -->
                     <button type="submit" class="btn btn-submit btn-W"> 
                         Отправить
                     </button>
