fix-adaptive-style

--- a/index.html
+++ b/index.html
@@ -67,20 +67,28 @@
     </div>
     <div class="contacts">
         <div>
-            <i class="fa-solid fa-phone"></i> 
-            8 747 960 21 81
+            <p>
+                <i class="fa-solid fa-phone"></i> 
+                8 747 960 21 81
+            </p>
         </div>
         <div>
-            <i class="fa-solid fa-phone"></i> 
-            8 771 141 12 81
+            <p>
+                <i class="fa-solid fa-phone"></i> 
+                8 771 141 12 81
+            </p>
         </div>
         <div>
-            <i class="fa-solid fa-phone"></i> 
-            8 747 476 04 53
+            <p>
+                <i class="fa-solid fa-phone"></i> 
+                8 747 476 04 53
+            </p>
         </div>
         <div>
-            <i class="fa-solid fa-envelope"></i> 
-            discover_91@mail.ru
+            <p>
+                <i class="fa-solid fa-envelope"></i> 
+                discover_91@mail.ru
+            </p>
         </div>
     </div>
   </div>
@@ -370,9 +378,9 @@
                     Оставьте заявку
                 </h1>
 
-                <p class="footer_ph_num_link">
+                <h2 class="footer_block_name">
                     Мастер свяжется с вами в ближайшее время
-                </p>
+                </h2>
                 
                 <form action="POST" class="footer_form" id="whatsappForm">
                     <label for="name">Ваше имя</label>
