add-google-script-tag

--- a/index.html
+++ b/index.html
@@ -59,12 +59,19 @@
         "serviceType": "Ремонт бытовой техники"
     }
     </script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17658337573">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'AW-17658337573');
+    </script>
 </head>
 <body>
-    <!-- 
-    Бытовуха 911
-    Скорая техпомощь 24/7
-    -->
   <div class="topbar">
     <div><i class="fa-solid fa-wrench"></i>  
         Ремонт бытовой техники в Алматы и Алматинской области
