--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <meta property="og:title" content="Ремонт бытовой техники в Алматы">
     <meta property="og:description" content="Быстрый и качественный ремонт бытовой техники">
     <meta property="og:type" content="website">
+    <meta property="og:url" content="https://almaty-service.netlify.app">
+    <meta property="og:image" content="https://almaty-service.netlify.app/images/logo.jpg">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://almaty-service.netlify.app">
