edit-conversion-script

--- a/index.html
+++ b/index.html
@@ -63,8 +63,11 @@
     </script>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17658337573">
+    <script 
+    async 
+    src="https://www.googletagmanager.com/gtag/js?id=AW-17658337573">
     </script>
+    
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -81,9 +84,7 @@
             }
         };
         gtag('event', 'conversion', {
-            'send_to': 'AW-17658337573/S1QUCP3a7bEbEKWyk-RB',
-            'value': 1.0,
-            'currency': 'USD',
+            'send_to': 'AW-17658337573/XqMcCPuyt7QbEKWyk-RB',
             'event_callback': callback
         });
         return false;
